crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/invalid_visibility/function_type/nested/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 6012] Error: Invalid visibility, can only be "external" or "internal".
   ╭─[input.sol:5:71]
   │
 5 │     function f() external pure returns (function () internal returns (function () public)) {}
   │                                                                       ─────────┬─────────  
   │                                                                                ╰─────────── Error occurred here.
───╯
